--- a/Kitana/app/src/main/res/layout/app_bar_main.xml
+++ b/Kitana/app/src/main/res/layout/app_bar_main.xml
@@ -18,4 +18,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <include layout="@layout/activity_main_content" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
