--- a/Kitana/app/src/main/res/drawable/nav_header_main_background.xml
+++ b/Kitana/app/src/main/res/drawable/nav_header_main_background.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-</selector>
+    <gradient
+        android:angle="360"
+        android:endColor="#0A80F5"
+        android:startColor="#0BCCEB"
+        android:type="linear" />
+</shape>
