--- a/Kitana/app/src/main/res/layout/activity_date_time.xml
+++ b/Kitana/app/src/main/res/layout/activity_date_time.xml
@@ -61,7 +61,8 @@
             android:enabled="false"
             app:layout_constraintStart_toEndOf="@+id/local_date_and_time_utc"
             app:layout_constraintTop_toBottomOf="@+id/button2"
-            tools:text="UTC" />
+            tools:text="UTC"
+            android:text="@={viewmodel.utc}"/>
 
         <TextView
             android:id="@+id/textView3"
@@ -87,7 +88,7 @@
             android:text="@string/local_date_and_time_use_current_time"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
-            android:checked="@={viewmodel.useCurrentTime}"/>
+            android:onClick="@{() -> viewmodel.onUseCurrentTime()}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
