--- a/Kitana/app/src/main/res/layout/activity_date_time.xml
+++ b/Kitana/app/src/main/res/layout/activity_date_time.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="viewmodel"
             type="com.svenschmidt.kitana.viewmodel.DateTimeViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".DateTimeActivity">
@@ -45,24 +45,43 @@
             app:layout_constraintTop_toBottomOf="@+id/button" />
 
         <TextView
+            android:id="@+id/local_date_and_time_local_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="@string/local_date_and_time_local_time"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+        <TextView
+            android:id="@+id/local_date_and_time_local_time_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:enabled="false"
+            app:layout_constraintStart_toEndOf="@+id/local_date_and_time_local_time"
+            app:layout_constraintTop_toBottomOf="@+id/button2"
+            tools:text="Local Time"
+            android:text="@={viewmodel.localTime}"/>
+
+        <TextView
             android:id="@+id/local_date_and_time_utc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text="@string/local_date_and_time_utc"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button2" />
+            app:layout_constraintTop_toBottomOf="@+id/local_date_and_time_local_time" />
 
         <TextView
             android:id="@+id/local_date_and_time_utc_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:enabled="false"
+            android:text="@={viewmodel.utcTime}"
             app:layout_constraintStart_toEndOf="@+id/local_date_and_time_utc"
-            app:layout_constraintTop_toBottomOf="@+id/button2"
-            tools:text="UTC"
-            android:text="@={viewmodel.utc}"/>
+            app:layout_constraintTop_toBottomOf="@+id/local_date_and_time_local_time"
+            tools:text="UTC" />
 
         <TextView
             android:id="@+id/textView3"
@@ -80,7 +99,7 @@
             android:enabled="false"
             app:layout_constraintStart_toEndOf="@+id/textView3"
             app:layout_constraintTop_toTopOf="@+id/textView3"
-            tools:text="UTC" />
+            tools:text="Julian Day" />
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -88,6 +107,7 @@
             android:text="@string/local_date_and_time_use_current_time"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
+            android:checked="@={viewmodel.useCurrentTime}"
             android:onClick="@{() -> viewmodel.onUseCurrentTime()}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
