--- a/Kitana/app/src/main/res/layout/activity_date_time.xml
+++ b/Kitana/app/src/main/res/layout/activity_date_time.xml
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:layout_weight="1"
-                    android:gravity="right"
+                    android:gravity="end"
                     android:text="@string/local_date_and_time_select_date"
                     android:textSize="14sp" />
 
