--- a/Kitana/app/src/main/res/values/colors.xml
+++ b/Kitana/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="divider_background">#e0e0e0</color>
+    <color name="divider_color">#EAEAEA</color>
 
 </resources>
